--- a/api/package.json
+++ b/api/package.json
@@ -9,5 +9,18 @@
     "nodemon": "^3.1.10",
     "path": "^0.12.7",
     "serverless-http": "^3.2.0"
-  }
+  },
+  "name": "api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+  "start": "node index.js"
+
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
